# jlibheif

./: .gitmodules  CMakeLists.txt
include/: PngEncoder.h  ru_likhogub_HelloJNI.h
jlibheif-jni/: pom.xml
jlibheif-jni/src/main/java/ru/likhogub/: HelloJNI.java
src/: PngEncoder.cpp  encoder_png.cc  main.cpp  ru_likhogub_HelloJNI.cc
